# KlipperScreen

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  KlipperScreen.config  KlipperScreen.pot  KlippyGcodes.py  KlippyGtk.py  KlippyRest.py  KlippyWebsocket.py  LICENSE  Macros  README.md  SYNCRAFT.md  __builtins__.pyi  __main__.py  files.py  index.html  klipperscreen.conf  mkdocs.yml  printer.py  pyproject.toml  requirements.txt  screen.py  sitemap.xml  style.css
.github/: FUNDING.yml  dependabot.yml
.history/: screen_20211103113411.py  screen_20211104110728.py  screen_20211104111026.py  screen_20211104111037.py
Android/: index.html
Backends/: index.html
Changelog/: index.html
Configuration/: index.html
Contact/: index.html
Developers/: index.html
FAQ/: index.html
Hardware/: index.html
Installation/: index.html
Multi_instance/: index.html
Panels/: index.html
Quicktips/: index.html
Theming/: index.html
Thumbnails/: index.html
Translations/: index.html
Troubleshooting/: index.html
Updating/: index.html
VNC/: index.html
breaking/: index.html
changelog/: index.html
config/: calibrate_menu.conf  defaults.conf  main_menu.conf  move_menu.conf  print_menu.conf  splash_menu.conf
docs/: Android.md  Backends.md  Changelog.md  Configuration.md  Contact.md  Developers.md  FAQ.md  Hardware.md  Installation.md  Job_status.md  Keybindings.md  Multi_instance.md  Panels.md  Quicktips.md  Screws.md  Temperature.md  Theming.md  Thumbnails.md  Translations.md  Troubleshooting.md  Updating.md  VNC.md  Zcalibrate.md  (+7 more)
(+507 files in other folders)
